[gd_scene load_steps=14 format=3 uid="uid://b6f4x51o46xhd"]

[ext_resource type="Texture2D" uid="uid://dr5uw7vff6dhc" path="res://src/main/assets/texture/background/bg.png" id="1_05dbx"]
[ext_resource type="Script" path="res://src/main/scene/level/trash_pick/trash_pick_main.gd" id="1_jed83"]
[ext_resource type="Texture2D" uid="uid://b8tl12fgmoihm" path="res://src/main/assets/texture/Treasure/BigTreasureChest.png" id="2_ppxfx"]
[ext_resource type="Texture2D" uid="uid://ckhr8732l1gub" path="res://src/main/assets/texture/Food/SeedBig1.png" id="3_aea1l"]

[sub_resource type="Animation" id="Animation_p5mub"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_mlkpj"]
resource_name = "shake"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.279253, 0.0, -0.279253, 0.0]
}

[sub_resource type="Animation" id="Animation_b4pna"]
resource_name = "stretch"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(4, 4.5), Vector2(4, 4), Vector2(4, 3.5), Vector2(4, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rcx0v"]
_data = {
"RESET": SubResource("Animation_p5mub"),
"shake": SubResource("Animation_mlkpj"),
"stretch": SubResource("Animation_b4pna")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7mgs"]
size = Vector2(16.5, 13.5)

[sub_resource type="Animation" id="Animation_8dq4b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bmdkh"]
resource_name = "shake"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.279253, 0.0, -0.279253, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l8psn"]
_data = {
"RESET": SubResource("Animation_8dq4b"),
"shake": SubResource("Animation_bmdkh")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ble8o"]
size = Vector2(9.33334, 10)

[node name="TrashPickMain" type="Node2D"]
script = ExtResource("1_jed83")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(480, 360)
texture = ExtResource("1_05dbx")

[node name="Box" type="Sprite2D" parent="."]
position = Vector2(286, 182)
scale = Vector2(4, 4)
texture = ExtResource("2_ppxfx")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Box"]
libraries = {
"": SubResource("AnimationLibrary_rcx0v")
}

[node name="Area2DBox" type="Area2D" parent="Box"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box/Area2DBox"]
position = Vector2(0.25, 1)
shape = SubResource("RectangleShape2D_a7mgs")

[node name="Food" type="Sprite2D" parent="." groups=["food"]]
position = Vector2(351, 372)
scale = Vector2(3, 3)
texture = ExtResource("3_aea1l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Food"]
libraries = {
"": SubResource("AnimationLibrary_l8psn")
}
autoplay = "shake"

[node name="Area2D" type="Area2D" parent="Food"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Food/Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ble8o")

[connection signal="input_event" from="Box/Area2DBox" to="." method="_on_area_2d_box_input_event"]
[connection signal="mouse_entered" from="Box/Area2DBox" to="." method="_on_area_2d_box_mouse_entered"]
[connection signal="mouse_exited" from="Box/Area2DBox" to="." method="_on_area_2d_box_mouse_exited"]
[connection signal="input_event" from="Food/Area2D" to="." method="_on_area_2d_input_event"]
